# spec/openapi.infra.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.0
 info:
   version: 0.1.0
-  title: Moru API
+  title: Moru Sandbox API
 
 servers:
   - url: https://api.moru.io
@@ -255,7 +255,7 @@ components:
     SandboxLogEntry:
       required:
         - timestamp
-        - level
+        - eventType
         - message
         - fields
       properties:
@@ -266,8 +266,8 @@ components:
         message:
           type: string
           description: Log message content
-        level:
-          $ref: '#/components/schemas/LogLevel'
+        eventType:
+          $ref: '#/components/schemas/SandboxLogEventType'
         fields:
           type: object
           additionalProperties:
@@ -1013,12 +1013,19 @@ components:
 
     LogLevel:
       type: string
-      description: State of the sandbox
+      description: Log level for build logs
       enum:
         - debug
         - info
         - warn
         - error
+
+    SandboxLogEventType:
+      type: string
+      description: Type of sandbox log event (stdout or stderr)
+      enum:
+        - stdout
+        - stderr
 
     BuildLogEntry:
       required:
@@ -1777,7 +1784,7 @@ paths:
       parameters:
         - $ref: '#/components/parameters/sandboxID'
         - in: query
-          name: start
+          name: cursor
           schema:
             type: integer
             format: int64
@@ -1786,11 +1793,21 @@ paths:
         - in: query
           name: limit
           schema:
-            default: 1000
+            default: 100
+            type: integer
             format: int32
             minimum: 0
-            type: integer
+            maximum: 100
           description: Maximum number of logs that should be returned
+        - in: query
+          name: direction
+          schema:
+            $ref: '#/components/schemas/LogsDirection'
+        - in: query
+          name: eventType
+          description: Filter by event type (stdout or stderr). If not specified, returns all logs.
+          schema:
+            $ref: '#/components/schemas/SandboxLogEventType'
       responses:
         '200':
           description: Successfully returned the sandbox logs
